# Ray-Tracing

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  build.py  justfile
examples/: box_sph_in_cor.json  cornell.json  json.md  main.json  test.json
src/: global.hpp  main.cpp
src/camera/: camera.hpp  cameraFOV.hpp  cameraOrient.hpp  camerabase.hpp
src/geometry/: AABB.hpp  BVH.hpp  ONB.hpp  aarect.hpp  box.hpp  constant_medium.hpp  flip_face.hpp  hittable.hpp  hittablelist.hpp  interval.hpp  meshTriangle.hpp  quad.hpp  ray.hpp  sphere.hpp  translate.hpp  triangle.hpp
src/material/: dielectric.hpp  diffuse_light.hpp  isotropic.hpp  lambertian.hpp  material.hpp  metal.hpp  pdf.hpp
src/renderer/: Renderer.hpp
src/scene/: balls_world.hpp  bunny_world.hpp  checker_balls.hpp  cornell_box.hpp  earth.hpp  scene.hpp  scene_parse.hpp  simple_light.hpp  test_scene.hpp  total_texture.hpp  zoo.hpp
src/texture/: checker_texture.hpp  image_texture.hpp  noise_texture.hpp  perlin.hpp  solid_color.hpp  texture.hpp
src/vector/: Vec3dx4.hpp  vec3dx4.h
